<resources>
    <string name="app_name">Hotspot</string>
    <!--    MainActivity2-->
    <string name="IP_dispositivo">IP dispositivo</string>
    <string name="botonServer">Server</string>
    <string name="botonCliente">Cliente</string>
    <string name="inputIP">IP del server</string>
    <string name="botonComenzar">Comenzar</string>
    <string name="inputMensaje">Mensaje</string>
    <string name="hotspot_details_message">detalleMensaje</string>
    <string name="hotspot_ssid_label">ssidLabel</string>
    <string name="hotspot_pass_label">passLabel</string>
    <string name="title_activity_traer_juegos">TraerJuegos</string>
    Strings used for fragments for navigation
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--    TraerJuegos-->
    <string name="textoCargando">Esperando jugadores</string>
    <string name="botonComenzarPartida">Comenzar partida</string>

    <string name="title_activity_jugar">Jugar</string>
    <string name="title_activity_main2">MainActivity</string>

    <!--    MainActivity-->
    <string name="nombreRed">nombre de la red</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="iniciar">Inicar</string>
    <string name="me_olvide_la_contrasenia">Me olvide la contrasenia</string>
    <string name="invalid_mail">mail incorreto</string>
    <string name="invalid_password">contrasenia incorreta</string>
    <string name="registrarse">Registrarse</string>
    <string name="mail">mail</string>
    <string name="contrasenia">contrasenia</string>
    <string name="gmail">gmail</string>
    <string name="facebook">facebook</string>
    <string name="iniciarr">iniciar</string>
    <string name="registrarse_con_mail">registrarse con mail</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="subir_foto">subir Foto</string>
    <string name="yapa">Yapa</string>
    <string name="contenido">Contenido</string>
    <string name="clear_all_label">limpiar</string>
    <string name="make_an_order">Make an order</string>
    <string name="dialog_title">Items available in a shop</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="unirse">Unirse a la partida</string>
    <string name="claveRed">clave de la red</string>
    <string name="turno">es mi turno</string>
    <string-array name="Colores">
        <item>AMARILLO</item>
        <item>VERDE</item>
        <item>CELESTE</item>
        <item>TURQUESA</item>
        <item>AZUL</item>
        <item>VIOLETA</item>
        <item>GRIS</item>
        <item>ROJO</item>
        <item>ROSA</item>
        <item>NARANJA</item>
        <item>NEGRO</item>
    </string-array>
    <string name="title_activity_cargando">Cargando</string>
</resources>